@@ -9,19 +9,38 @@ fn sparsable_derive(mut s: synstructure::Structure) -> proc_macro2::TokenStream 
             #bi.sparse_init(state, metadata, ndepth)?;
         }
     });
-
-    s.gen_impl(quote! {
-		extern crate sppparse;
-        gen impl sppparse::SparsableTrait for @Self {
-			fn sparse_init(&mut self, state: &mut sppparse::SparseState, metadata: &sppparse::SparseMetadata, depth: u32) -> Result<(), sppparse::SparseError>
-			{
-				let ndepth = depth+1;
-
-				match *self { #body };
-				Ok(())
-			}
-        }
-    })
+    let crate_name = proc_macro_crate::crate_name("sppparse")
+        .map(|v| syn::Ident::new(v.as_str(), proc_macro2::Span::call_site()));
+    match crate_name
+	{
+		Ok(name) =>
+		{
+			s.gen_impl(quote! {
+				extern crate #name as sppparse;
+				gen impl sppparse::SparsableTrait for @Self {
+					fn sparse_init(&mut self, state: &mut sppparse::SparseState, metadata: &sppparse::SparseMetadata, depth: u32) -> Result<(), sppparse::SparseError>
+					{
+						let ndepth = depth+1;
+						match *self { #body };
+						Ok(())
+					}
+				}
+			})
+		},
+		_ => {
+			s.gen_impl(quote! {
+				extern crate sppparse;
+				gen impl sppparse::SparsableTrait for @Self {
+					fn sparse_init(&mut self, state: &mut sppparse::SparseState, metadata: &sppparse::SparseMetadata, depth: u32) -> Result<(), sppparse::SparseError>
+					{
+						let ndepth = depth+1;
+						match *self { #body };
+						Ok(())
+					}
+				}
+			})
+		}
+	}
 }
 
 fn sparsable_derive_inner(mut s: synstructure::Structure) -> proc_macro2::TokenStream {
